--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ streamlit==1.44.1
 joblib==1.2.0
 pandas==2.2.3
 numpy==2.2.4
-setuptools>=65.5.0
+boto3==1.26.117
+matplotlib==3.7.1
+seaborn==0.12.2
+scikit-learn==1.3.2
