--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.44.1
-joblib==1.2.0
-pandas==2.2.3
-numpy==2.2.4
-boto3==1.26.117
-matplotlib==3.7.1
-seaborn==0.12.2
-scikit-learn==1.3.2
+streamlit
+joblib
+pandas
+numpy
+boto3
+matplotlib
+seaborn
+scikit-learn
